# bife-fast

./: .tm_project.cache  Makefile.am  configure.in
include/fast/: basic_template.h  get_file_content.h  get_file_content_cached.h  string.h  string_map.h
src/: get_file_content.cpp  get_file_content_cached.cpp
tests/: Makefile  fast  fast.cpp  test.tpl
