## vim: set noexpandtab tabstop=4 shiftwidth=4:
##----------------------------------------------------------------------------
##                                    fast
##----------------------------------------------------------------------------
## This file is part of fast.
##
## fast is free software; you can redistribute it and/or modify it under the
## terms of the GNU General Public License as published by the Free Software
## Foundation; either version 2 of the License, or (at your option) any later
## version.
##
## fast is distributed in the hope that it will be useful, but WITHOUT ANY
## WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
## FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
## details.
##
## You should have received a copy of the GNU General Public License along
## with fast; if not, write to the Free Software Foundation, Inc., 59 Temple
## Place, Suite 330, Boston, MA  02111-1307  USA
##----------------------------------------------------------------------------
## Creado:  sáb feb  7 17:22:50 ART 2004
## Autores: Leandro Lucarella <luca@lugmen.org.ar>
##----------------------------------------------------------------------------
##
## $Id: configure.in 450 2003-12-05 14:57:11Z luca $
##

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(fast, 0.1)
AM_MAINTAINER_MODE

dnl Prevents setting flags.
CXXFLAGS=""

AC_ISC_POSIX
AC_PROG_CXX
AM_PROG_CC_STDC
AC_PROG_RANLIB
AC_HEADER_STDC

dnl Debugging turned on
AC_MSG_CHECKING(for debugging)
AC_ARG_ENABLE(debug,[  --enable-debug          compile for debugging])
AC_MSG_RESULT([$enable_debug])
if test "x$enable_debug" = "xyes" ; then
CXXFLAGS="${CXXFLAGS} -g -DDEBUG"
fi

## pkg_modules="libgnomeui-2.0"
##PKG_CHECK_MODULES(PACKAGE, 
##		libxml-2.0 >= 0.15.0 \
##		libxml++-1.0 >= 0.15.0 \
##		gthread-2.0 \
##		sigc++-1.2)

AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
tests/Makefile
])

echo
echo "fast is now ready for compilation. Just run make."
echo

